# tenk-nlp

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 3770efa62374_customer_table.py  cbac8ba5c90c_customer_table.py
data/companies/: BATS.json  INDEX.json  NYSEARCA.json  NYSEMKT.json  OTC.json
temp/: aapl_risks.txt
tenk_nlp/: cli.py
tenk_nlp/db/: __init__.py  models.py
tenk_nlp/etl/: companies.py  tenk.py
tenk_nlp/extract/: companies.py
tenk_nlp/keywords/: keyword_gen.py
tenk_nlp/sec_data/: sec_edgar.py
tenk_nlp/summarizers/: models.py  summarizer.py
tenk_nlp/utils/: utils.py
